--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Women -- Biography'
 - !lcc 'CT'
+- GITenberg
 tableOfContents: The Princess Alice -- Mrs. Hannah More -- Lady Jane Grey -- Selina,
   Countess of Huntingdon -- Queen Elizabeth -- Mrs. Hemans -- Mary, Queen of Scots
   -- Pocahontas, the Rosebud -- Mrs. Opie -- Grace Darling -- Mrs. Fry -- Agnes Strickland.
